[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tools-searxng-md"
version = "0.2.1"
description = "LLM plugin: SearXNG search tool returning LLM-friendly markdown output"
readme = "README.md"
authors = [{ name = "Vanessa Beck", email = "vanessa.beckk1@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest", "pytest-httpx"]

[project.urls]
Homepage = "https://github.com/stochastic-sisyphus/llm-tools-searxng-md"
Changelog = "https://github.com/stochastic-sisyphus/llm-tools-searxng-md/releases"
Issues = "https://github.com/stochastic-sisyphus/llm-tools-searxng-md/issues"

[project.entry-points.llm]
tools_searxng_md = "llm_tools_searxng_md"
